# rust-ml-inference-api

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: api.rs  errors.rs  inference.rs  main.rs  models.rs
